--- a/Main Frontend/Travellers.html
+++ b/Main Frontend/Travellers.html
@@ -164,14 +164,14 @@
     </div>
 </div>
 
-            <!-- <div class="col-lg-8">
+            <div class="col-lg-8">
                 <div class="card shadow-sm">
                     <div class="card-header bg-light">
                         <h4 class="mb-0"><i class="fas fa-users me-2"></i>Flight & Traveller Details</h4>
                     </div>
-                    <div class="card-body"> -->
+                    <div class="card-body">
                         <!-- Traveller 1 Form -->
-                        <!-- <div class="traveller-form mb-5" id="traveller1">
+                        <div class="traveller-form mb-5" id="traveller1">
                             <div class="d-flex justify-content-between align-items-center mb-3">
                                 <h5 class="text-primary mb-0">
                                     <i class="fas fa-user me-2"></i>Traveller 1
@@ -254,7 +254,7 @@
                         </div>
                         
                         <hr class="my-4">
-                         -->
+                        
                         <!-- Traveller 2 Form -->
                         <!-- <div class="traveller-form" id="traveller2">
                             <div class="d-flex justify-content-between align-items-center mb-3">
